# Crit2048_DZVN

./: .gitignore  .prettierignore  CONTRIBUTING.md  README.md  app-release-signed.apk.idsig  build.bat  build.py  build.sh  build_all.py  crit2048.keystore  electron-builder.yml  electron-main.cjs  eslint.config.js  index.html  jest.config.cjs  manifest-checksum.txt  package-lock.json  package.json  patch-forge.py  patch-marketplace.py  patch.py  play.bat  tsconfig.app.json  tsconfig.test.json  twa-manifest.json  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  deploy.yml
.web-build/: index.html  original.html
.web-build/js/: combat.js  config.js  d20.js  data.js  dice.js  grid.js  main.js  modals.js  spells.js  state.js  tavern.js  ui.js
Crit2048_DZVN/: package-lock.json  package.json
app/: build.gradle
css/: main.css  tailwind-input.css  tailwind.css
js/: api.js  atmosphere.js  combat.js  config.js  d20.js  data.js  dice.js  grid.js  image-generator.js  leaderboard.js  main.js  modals.js  pack-default.js  pack-engine.js  pack-forge.js  pack-marketplace.js  pack-storage.js  plugins.js  prng.js  sfx.js  spells.js  state.js  tavern.js  ui.js
js/templates/: modal-alert.js  (+11 more)
legacy/: index.html  tailwind.config.js
public/: .nojekyll  404.html  humans.txt  opensearch.xml  robots.txt  sitemap.xml
scripts/: build-all.ps1  build-android.ps1  build-desktop.ps1  build-web.js  setup.ps1  update-version.js
src/: App.tsx  index.css  main.tsx  prerender.tsx  vite-env.d.ts
src-tauri/: .env.example  .gitignore  Cargo.toml  build_error.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test/: actionQueue.test.ts  combat.test.ts  grid.test.ts  packValidator.test.ts  prng.test.ts  registry.test.ts  setupTests.ts  storage.test.ts
(+129 files in other folders)
