[package]
name = "crit-2048"
version = "1.0.0"
description = "A roguelike dungeon crawler built on 2048, inspired by Balatro and D&D 5e"
authors = ["DZVN"]
license = "GPL-3.0"
repository = "https://github.com/denzven/crit2048"
defaut-run = "crit-2048"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "crit_2048_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "crit-2048"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
