[package]
name = "app"
version = "1.2.2"
description = "Crit 2048 — A roguelike dungeon crawler powered by 2048 mechanics and D&D dice"
authors = ["denzven"]
license = "GPL-3.0"
repository = "https://github.com/denzven/Crit2048_DZVN"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-haptics = "2.0.0"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-share = { git = "https://github.com/lindongchen/tauri-plugin-share" }
tauri-plugin-opener = "2.0.0"
tauri-plugin-dialog = "2.0.0"
discord-rich-presence = "0.2.4"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
